changed tests so that they work with the recorded Weymouth data, not requiring the simulator